0.102.1/docs/generated-docs/smallrye-nessie_version_store_persist.md
---
search:
  exclude: true
---
<!--start-->

| Property | Default Value | Type | Description |
|----------|---------------|------|-------------|
| `nessie.version.store.persist.repository-id` | (empty) | `string` | Nessie repository ID (optional) that identifies a particular Nessie storage repository. <br><br>When remote (shared) database is used, multiple Nessie repositories may co-exist in the same  database (and in the same schema). In that case this configuration parameter can be used to  distinguish those repositories.  |
| `nessie.version.store.persist.commit-retries` | `2147483647` | `int` | maximum retries for CAS-like operations. Used when committing to Nessie, when the HEAD (or tip)  of a branch changed during the commit, this value defines the maximum number of retries.  Default means unlimited. <br><br>See: #retryMaxSleepMillis() |
| `nessie.version.store.persist.commit-timeout-millis` | `5000` | `long` | Timeout for CAS-like operations in milliseconds. <br><br>See: #retryMaxSleepMillis() |
| `nessie.version.store.persist.retry-initial-sleep-millis-lower` | `5` | `long` | When the commit logic has to retry an operation due to a concurrent, conflicting update to the  database state, usually a concurrent change to a branch HEAD, this parameter defines the  _initial_ _lower_ bound of the exponential backoff.  <br><br>See: #retryMaxSleepMillis() |
| `nessie.version.store.persist.retry-initial-sleep-millis-upper` | `25` | `long` | When the commit logic has to retry an operation due to a concurrent, conflicting update to the  database state, usually a concurrent change to a branch HEAD, this parameter defines the  _initial_ _upper_ bound of the exponential backoff.  <br><br>See: #retryMaxSleepMillis() |
| `nessie.version.store.persist.retry-max-sleep-millis` | `250` | `long` | When the commit logic has to retry an operation due to a concurrent, conflicting update to the  database state, usually a concurrent change to a branch HEAD, this parameter defines the  _maximum_ sleep time.  Each retry doubles the lower and upper bounds of the random sleep  time, unless the doubled upper bound would exceed the value of this configuration property. <br><br>See: #retryInitialSleepMillisUpper() |
| `nessie.version.store.persist.parents-per-commit` | `20` | `int` | Number of parent-commit-hashes stored in each commit. This is used to allow bulk-fetches when  accessing the commit log.  |
| `nessie.version.store.persist.max-serialized-index-size` | `204800` | `int` | The maximum allowed serialized size of the content index structure in a _reference  index_ segment.  This value is used to determine, when elements in a reference index segment  need to be split.   <br><br>Note: this value _must_ be smaller than a database's _hard item/row size  limit_. |
| `nessie.version.store.persist.max-incremental-index-size` | `51200` | `int` | The maximum allowed serialized size of the content index structure in a _Nessie commit_,  called _incremental index_. This value is used to determine, when elements in an  incremental index, which were kept from previous commits, need to be pushed to a new or updated  _reference index_.   <br><br>Note: this value _must_ be smaller than a database's _hard item/row size  limit_. |
| `nessie.version.store.persist.max-reference-stripes-per-commit` | `50` | `int` | Maximum number of referenced index objects stored inside commit objects. <br><br>If the external reference index for this commit consists of up to this amount of stripes,  the references to the stripes will be stored inside the commit object. If there are more than  this amount of stripes, an external _index segment_ will be created instead.  |
| `nessie.version.store.persist.assumed-wall-clock-drift-micros` | `5000000` | `long` | Assumed wall-clock drift between multiple Nessie instances in microseconds.  |
| `nessie.version.store.persist.ref-previous-head-count` | `20` | `int` | Named references keep a history of up to this amount of previous HEAD pointers, and up to the  configured age.   |
| `nessie.version.store.persist.ref-previous-head-time-span-seconds` | `300` | `long` | Named references keep a history of previous HEAD pointers with this age in seconds, and up to  the configured amount.   |
| `nessie.version.store.persist.cache-capacity-mb` |  | `int` | Fixed amount of heap used to cache objects, set to 0 to disable the cache entirely. Must not be  used with fractional cache sizing. See description for `cache-capacity-fraction-of-heap` for the default value.  |
| `nessie.version.store.persist.cache-enable-soft-references` | `true` | `boolean` | Nessie keeps so called soft-references of the cached Java objects in addition to the serialized  representation around.  <br><br>This toggle optionally enables this behavior. |
| `nessie.version.store.persist.cache-capacity-fraction-min-size-mb` |  | `int` | When using fractional cache sizing, this amount in MB is the minimum cache size.  |
| `nessie.version.store.persist.cache-capacity-fraction-of-heap` |  | `double` | Fraction of Java’s max heap size to use for cache objects, set to 0 to disable. Must not be  used with fixed cache sizing. If neither this value nor a fixed size is configured, a default  of `.6` (60%) is assumed.  |
| `nessie.version.store.persist.cache-capacity-fraction-adjust-mb` |  | `int` | When using fractional cache sizing, this amount in MB of the heap will always be "kept free"  when calculating the cache size.   |
| `nessie.version.store.persist.reference-cache-ttl` |  | `duration` | Defines the duration how long references shall be kept in the cache. Defaults to not cache  references. If reference caching is enabled, it is highly recommended to also enable negative  reference caching.   <br><br>It is safe to enable this for single node Nessie deployments.   <br><br>Recommended value is currently `PT5M` for distributed and high values like `PT1H` for single node Nessie deployments.   <br><br>_This feature is experimental except for single Nessie node deployments! If in doubt,  leave this un-configured!_ |
| `nessie.version.store.persist.reference-cache-negative-ttl` |  | `duration` | Defines the duration how long sentinels for non-existing references shall be kept in the cache  (negative reference caching).  <br><br>Defaults to `reference-cache-ttl`. Has no effect, if `reference-cache-ttl` is  not configured. Default is not enabled. If reference caching is enabled, it is highly  recommended to also enable negative reference caching.   <br><br>It is safe to enable this for single node Nessie deployments.   <br><br>Recommended value is currently `PT5M` for distributed and high values like `PT1H` for single node Nessie deployments.   <br><br>_This feature is experimental except for single Nessie node deployments! If in doubt,  leave this un-configured!_ |
| `nessie.version.store.persist.cache-invalidations.service-names` |  | `list of string` | Host names or IP addresses or kubernetes headless-service name of all Nessie server instances  accessing the same repository.  <br><br>This value is automatically configured via the [Nessie  Helm chart ](../../guides/kubernetes/) or the Kubernetes operator (not released yet), you don't need any additional  configuration for distributed cache invalidations - it's setup and configured automatically. If  you have your own Helm chart or custom deployment, make sure to configure the IPs of all Nessie  instances here.   <br><br>Names that start with an equal sign are not resolved but used "as is". |
| `nessie.version.store.persist.cache-invalidations.valid-tokens` |  | `list of string` | List of cache-invalidation tokens to authenticate incoming cache-invalidation messages.  |
| `nessie.version.store.persist.cache-invalidations.uri` | `/nessie-management/cache-coherency` | `string` | URI of the cache-invalidation endpoint, only available on the Quarkus management port, defaults  to 9000.   |
| `nessie.version.store.persist.cache-invalidations.service-name-lookup-interval` | `PT10S` | `duration` | Interval of service-name lookups to resolve the service names (#cacheInvalidationServiceNames()) into IP addresses.   |
| `nessie.version.store.persist.cache-invalidations.batch-size` | `20` | `int` |  |
| `nessie.version.store.persist.cache-invalidations.request-timeout` |  | `duration` |  |
